# lylo-mechanic

./: CONSTITUTION.md  README.md  gen_icon.py  lylo_files.json  push_to_github.ps1  pyproject.toml  render.yaml  requirements.txt  setup_lylo.py
backend/: app.py  event_blackbox.py  failure_predictor.py  lylo_auth.py  pyproject.toml  quote_auditor.py  requirements.txt  test_truth_system.py  truth_detector.py
backend/api/: orchestrator.py
backend/api/routes/: analyze.py  billing.py  diagnose.py  live.py  obd2.py  persona.py  quick_check.py  scenarios.py  session.py  truth.py  tutorial.py
backend/auth/: __init__.py  supabase_auth.py
backend/claspion/: __init__.py  claspion_production_service.py  claspion_semantic_intent_classifier.py  claspion_technical_attack_detector.py
backend/confidence/: confidence_engine.py
backend/cost/: cost_engine.py
backend/data/dtc_db/: dtc_codes.json
backend/data/hypothesis_rules/: cause_map.json
backend/data/pricing/: repair_costs.json
backend/demo_scenarios/: scenarios.py
backend/diagnosis/: hypothesis_engine.py
backend/diy/: eligibility_gate.py
backend/handshake/: client.py
backend/models/: schemas.py  user.py
backend/normalization/: normalizer.py
backend/personas/: router.py
backend/safety/: safety_classifier.py
backend/veracore/: truth_check.py
claspion/: CLASPION_AGENTIC_CONTAINMENT_v1.0.md  CLASPION_EXECUTIVE_SUMMARY.md  COMMIT_GATE_INTEGRATION.md  README.md  commit_gate.py  witness.py
mobile/: .gitignore  README.md  app.json  eas.json  index.js  package-lock.json  package.json
mobile/ios/: Podfile
(+34 files in other folders)
