[tool.poetry]
name = "lylo-mechanic"
version = "1.0.0"
description = "LYLO Mechanic — The Good Neighbor Guard"
authors = ["Christopher Hughes"]

[tool.poetry.dependencies]
python = "^3.11"
flask = ">=3.0.0"
flask-cors = ">=4.0.0"
requests = ">=2.31.0"
anthropic = ">=0.18.0"
gunicorn = ">=23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
